--- a/config/samples/metrics_v1alpha1_prometheusserver_singlecluster.yaml
+++ b/config/samples/metrics_v1alpha1_prometheusserver_singlecluster.yaml
@@ -6,7 +6,7 @@ spec:
   address: http://prometheus.istio-system:9090
   clusters:
     - exporterSelector:
-        matchExpression:
+        matchExpressions:
           - key: exporter
             operator: NotIn
             values:
