--- a/config/samples/metrics_v1alpha1_istio.yaml
+++ b/config/samples/metrics_v1alpha1_istio.yaml
@@ -8,22 +8,26 @@ spec:
       metrics:
         - type: responseTime
           queries:
-            used: 'rate(istio_request_duration_milliseconds_sum{request_protocol="http",response_code="200",reporter="destination"}[1m])/rate(istio_request_duration_milliseconds_count{}[1m]) >= 0'
+            - type: used
+              promql: 'rate(istio_request_duration_milliseconds_sum{request_protocol="http",response_code="200",reporter="destination"}[1m])/rate(istio_request_duration_milliseconds_count{}[1m]) >= 0'
         - type: transaction
           queries:
-            used: 'rate(istio_requests_total{request_protocol="http",response_code="200",reporter="destination"}[1m]) > 0'
+            - type: used
+              promql: 'rate(istio_requests_total{request_protocol="http",response_code="200",reporter="destination"}[1m]) > 0'
         - type: responseTime
           queries:
-            used: 'rate(istio_request_duration_milliseconds_sum{request_protocol="grpc",grpc_response_status="0",response_code="200",reporter="destination"}[1m])/rate(istio_request_duration_milliseconds_count{}[1m]) >= 0'
+            - type: used
+              promql: 'rate(istio_request_duration_milliseconds_sum{request_protocol="grpc",grpc_response_status="0",response_code="200",reporter="destination"}[1m])/rate(istio_request_duration_milliseconds_count{}[1m]) >= 0'
         - type: transaction
           queries:
-            used: 'rate(istio_requests_total{request_protocol="grpc",grpc_response_status="0",response_code="200",reporter="destination"}[1m]) > 0'
+            - type: used
+              promql: 'rate(istio_requests_total{request_protocol="grpc",grpc_response_status="0",response_code="200",reporter="destination"}[1m]) > 0'
       attributes:
-        ip:
+        - name: ip
           label: instance
           matches: \d{1,3}(?:\.\d{1,3}){3}(?::\d{1,5})??
           isIdentifier: true
-        namespace:
+        - name: namespace
           label: destination_service_namespace
-        service:
+        - name: service
           label: destination_service_name
