--- a/config/samples/metrics_v1alpha1_jmx-tomcat.yaml
+++ b/config/samples/metrics_v1alpha1_jmx-tomcat.yaml
@@ -9,19 +9,24 @@ spec:
       metrics:
         - type: cpu
           queries:
-            used: 'java_lang_OperatingSystem_ProcessCpuLoad'
+            - type: used
+              promql: 'java_lang_OperatingSystem_ProcessCpuLoad'
         - type: memory
           queries:
-            used: 'java_lang_Memory_HeapMemoryUsage_used/1024'
-            capacity: 'java_lang_Memory_HeapMemoryUsage_max/1024'
+            - type: used
+              promql: 'java_lang_Memory_HeapMemoryUsage_used/1024'
+            - type: capacity
+              promql: 'java_lang_Memory_HeapMemoryUsage_max/1024'
         - type: collectionTime
           queries:
-            used: 'sum without (name) (delta(java_lang_GarbageCollector_CollectionTime)[10m])/600*100'
+            - type: used
+              promql: 'sum without (name) (delta(java_lang_GarbageCollector_CollectionTime)[10m])/600*100'
         - type: responseTime
           queries:
-            used: 'rate(Catalina_GlobalRequestProcessor_processingTime{name=~".*http-.*"}[3m])'
+            - type: used
+              promql: 'rate(Catalina_GlobalRequestProcessor_processingTime{name=~".*http-.*"}[3m])'
       attributes:
-        ip:
+        - name: ip
           label: instance
           matches: \d{1,3}(?:\.\d{1,3}){3}(?::\d{1,5})??
           isIdentifier: true
