--- a/config/samples/metrics_v1alpha1_webdriver.yaml
+++ b/config/samples/metrics_v1alpha1_webdriver.yaml
@@ -9,11 +9,12 @@ spec:
       metrics:
         - type: responseTime
           queries:
-            used: '1000*(navigation_timing_load_event_end_seconds{job="webdriver"}-navigation_timing_start_seconds{job="webdriver"})'
+            - type: used
+              promql: '1000*(navigation_timing_load_event_end_seconds{job="webdriver"}-navigation_timing_start_seconds{job="webdriver"})'
       attributes:
-        ip:
+        - name: ip
           label: instance
           matches: \d{1,3}(?:\.\d{1,3}){3}(?::\d{1,5})??
           isIdentifier: true
-        target:
+        - name: target
           label: job
