Add regular expression validation for cluster ID

--- a/config/crd/bases/metrics.turbonomic.io_prometheusservers.yaml
+++ b/config/crd/bases/metrics.turbonomic.io_prometheusservers.yaml
@@ -128,6 +128,7 @@ spec:
                             is typically 8 characters long and represented in hexadecimal
                             format. For example, if the service ID is "5f2bd289-20b8-4c3c-be48-f5c5d8ff9c82",
                             the extracted ID would be "5f2bd289".'
+                          pattern: ^[0-9a-fA-F]{8}$
                           type: string
                       required:
                       - clusterLabels
