--- a/config/samples/metrics_v1alpha1_prometheusserver_multicluster.yaml
+++ b/config/samples/metrics_v1alpha1_prometheusserver_multicluster.yaml
@@ -9,9 +9,9 @@ spec:
         id: "5f2bd289"
         clusterLabels:
           cluster: clusterA
-      exporterSelector:
+      queryMappingSelector:
         matchExpressions:
-          - key: exporter
+          - key: mapping
             operator: NotIn
             values:
               - istio
