--- a/config/rbac/prometheusquerymapping_editor_role.yaml
+++ b/config/rbac/prometheusquerymapping_editor_role.yaml
@@ -1,20 +1,24 @@
-# permissions for end users to view prometheusexporters.
+# permissions for end users to edit prometheusquerymappings.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: prometheusexporter-viewer-role
+  name: prometheusquerymapping-editor-role
 rules:
 - apiGroups:
   - metrics.turbonomic.io
   resources:
-  - prometheusexporters
+  - prometheusquerymappings
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - metrics.turbonomic.io
   resources:
-  - prometheusexporters/status
+  - prometheusquerymappings/status
   verbs:
   - get
