--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -8,7 +8,7 @@ rules:
 - apiGroups:
   - metrics.turbonomic.io
   resources:
-  - prometheusexporters
+  - prometheusquerymappings
   verbs:
   - create
   - delete
@@ -20,13 +20,13 @@ rules:
 - apiGroups:
   - metrics.turbonomic.io
   resources:
-  - prometheusexporters/finalizers
+  - prometheusquerymappings/finalizers
   verbs:
   - update
 - apiGroups:
   - metrics.turbonomic.io
   resources:
-  - prometheusexporters/status
+  - prometheusquerymappings/status
   verbs:
   - get
   - patch
