--- a/config/samples/metrics_v1alpha1_prometheusserverconfig_singlecluster.yaml
+++ b/config/samples/metrics_v1alpha1_prometheusserverconfig_singlecluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: metrics.turbonomic.io/v1alpha1
-kind: PrometheusServer
+kind: PrometheusServerConfig
 metadata:
-  name: prometheusserver-singlecluster
+  name: prometheusserverconfig-singlecluster
 spec:
   address: http://prometheus.istio-system:9090
   clusters:
