--- a/config/crd/patches/cainjection_in_prometheusserverconfigs.yaml
+++ b/config/crd/patches/cainjection_in_prometheusserverconfigs.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: prometheusservers.metrics.turbonomic.io
+  name: prometheusserverconfigs.metrics.turbonomic.io
