--- a/config/crd/patches/webhook_in_prometheusserverconfigs.yaml
+++ b/config/crd/patches/webhook_in_prometheusserverconfigs.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: prometheusservers.metrics.turbonomic.io
+  name: prometheusserverconfigs.metrics.turbonomic.io
 spec:
   conversion:
     strategy: Webhook
