--- a/config/rbac/prometheusserverconfig_editor_role.yaml
+++ b/config/rbac/prometheusserverconfig_editor_role.yaml
@@ -1,20 +1,24 @@
-# permissions for end users to view prometheusservers.
+# permissions for end users to edit prometheusserverconfigs.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: prometheusserver-viewer-role
+  name: prometheusserverconfig-editor-role
 rules:
 - apiGroups:
   - metrics.turbonomic.io
   resources:
-  - prometheusservers
+  - prometheusserverconfigs
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - metrics.turbonomic.io
   resources:
-  - prometheusservers/status
+  - prometheusserverconfigs/status
   verbs:
   - get
