--- a/config/rbac/prometheusserverconfig_viewer_role.yaml
+++ b/config/rbac/prometheusserverconfig_viewer_role.yaml
@@ -1,24 +1,20 @@
-# permissions for end users to edit prometheusservers.
+# permissions for end users to view prometheusserverconfigs.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: prometheusserver-editor-role
+  name: prometheusserverconfig-viewer-role
 rules:
 - apiGroups:
   - metrics.turbonomic.io
   resources:
-  - prometheusservers
+  - prometheusserverconfigs
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
 - apiGroups:
   - metrics.turbonomic.io
   resources:
-  - prometheusservers/status
+  - prometheusserverconfigs/status
   verbs:
   - get
