--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -34,7 +34,7 @@ rules:
 - apiGroups:
   - metrics.turbonomic.io
   resources:
-  - prometheusservers
+  - prometheusserverconfigs
   verbs:
   - create
   - delete
@@ -46,13 +46,13 @@ rules:
 - apiGroups:
   - metrics.turbonomic.io
   resources:
-  - prometheusservers/finalizers
+  - prometheusserverconfigs/finalizers
   verbs:
   - update
 - apiGroups:
   - metrics.turbonomic.io
   resources:
-  - prometheusservers/status
+  - prometheusserverconfigs/status
   verbs:
   - get
   - patch
