Add short names

--- a/config/crd/bases/metrics.turbonomic.io_prometheusserverconfigs.yaml
+++ b/config/crd/bases/metrics.turbonomic.io_prometheusserverconfigs.yaml
@@ -12,6 +12,8 @@ spec:
     kind: PrometheusServerConfig
     listKind: PrometheusServerConfigList
     plural: prometheusserverconfigs
+    shortNames:
+    - psc
     singular: prometheusserverconfig
   scope: Namespaced
   versions:
