--- a/config/crd/bases/metrics.turbonomic.io_prometheusquerymappings.yaml
+++ b/config/crd/bases/metrics.turbonomic.io_prometheusquerymappings.yaml
@@ -12,6 +12,8 @@ spec:
     kind: PrometheusQueryMapping
     listKind: PrometheusQueryMappingList
     plural: prometheusquerymappings
+    shortNames:
+    - pqm
     singular: prometheusquerymapping
   scope: Namespaced
   versions:
