--- a/config/crd/bases/metrics.turbonomic.io_prometheusserverconfigs.yaml
+++ b/config/crd/bases/metrics.turbonomic.io_prometheusserverconfigs.yaml
@@ -75,12 +75,9 @@ spec:
                           description: 'The unique ID of the cluster. Get the ID by
                             running the following command inside the cluster: kubectl
                             -n default get svc kubernetes -ojsonpath=''{.metadata.uid}''
-                            | grep -Eo "^[0-9a-fA-F]{8}" The resulting output should
-                            be the first segment of the Kubernetes service ID, which
-                            is typically 8 characters long and represented in hexadecimal
-                            format. For example, if the service ID is "5f2bd289-20b8-4c3c-be48-f5c5d8ff9c82",
-                            the extracted ID would be "5f2bd289".'
-                          pattern: ^[0-9a-fA-F]{8}$
+                            The resulting output should be the Kubernetes service
+                            ID, which is a version 4 UUID. For example, 5f2bd289-20b8-4c3c-be48-f5c5d8ff9c82.'
+                          pattern: ^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
                           type: string
                       required:
                       - clusterLabels
